# AfiCare

./: .env.example  .gitignore  AfiCare_API.postman_collection.json  AfiCare_Postman_Collection.json  CLEAN_FIX.sql  COMPREHENSIVE_PROJECT_ANALYSIS.md  DEPLOYMENT_COMMANDS.md  FIX_INFINITE_RECURSION.md  FLUTTER_APP_COMPLETE.md  FREE_SECURE_DEPLOYMENT.md  MOBILE_APP_TESTING_GUIDE.md  PHONE_APP_START.md  QUICK_FIX_RECURSION.sql  README.md  WHAT_CHANGED_EXPLANATION.md  create_aficare_structure.sh  deploy_both_apps.py  deploy_mobile_apps.py  docker-compose.yml  flutter_complete_deploy.py  get_mobile_url.py  global_deployment_complete.py  quick_flutter_setup.py  setup_flutter.ps1  setup_flutter_for_aficare.py  test_mobile_features.py  test_pwa_features.py
.github/workflows/: flutter.yml  pages.yml  streamlit.yml
.kiro/specs/data-persistence-enhancement/: design.md  requirements.md  tasks.md
aficare-agent/: .dockerignore  .gitignore  AI_AGENT_FRAMEWORKS_COMPARISON.md  CLOUD_DEPLOYMENT_GUIDE.md  COST_FREE_DEPLOYMENT_GUIDE.md  CRASH_FIX_GUIDE.md  CURRENT_PROJECT_STATUS.md  DATABASE_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_READY.md  Dockerfile  ENHANCED_FEATURES_COMPLETE.md  FIXES_APPLIED.txt  MEDILINK_SYSTEM_DESIGN.md  PATIENT_ACCESS_GUIDE.md  PATIENT_DATA_FLOW.md  PATIENT_OWNED_RECORDS.md  PRIORITY_1_COMPLETE.md  PRIORITY_1_STATUS_UPDATE.md  PRODUCTION_DATA_SETUP.md  PROJECT_STATUS_COMPLETE.md  Procfile  QUICK_START.md  README.md  START_AFICARE.bat  WINDOWS_SETUP_GUIDE.md  aficare.db  aficare_enhanced.db  aficare_medilink.db  ai_consultation_demo.py  check_mobile_access.py  check_ports.py  complete_mobile_solution.py  create_logo.py  deploy_aficare.py  deploy_global_simple.py  diagnose_issues.py  encryption.key  fix_and_run.py  fix_and_start.py  fix_firewall_mobile.py  (+54 more)
aficare-agent/.github/workflows/: build_release.yml
aficare-agent/.streamlit/: config.toml
aficare-agent/assets/: generate_pngs.py  splash.css
aficare-agent/config/: clinic_config.yaml  default.yaml  languages.yaml
aficare-agent/data/knowledge_base/conditions/: antenatal_care.json  childhood_diarrhea.json  diabetes.json  hypertension.json  malaria.json  maternal_health.json  pneumonia.json  tuberculosis.json
aficare-agent/data/knowledge_base/medications/: formulary_ke.json  interactions.json
aficare-agent/migrations/: 001_facilities_and_pwd.sql  002_rls_policies.sql  003_pwd_tables.sql  004_prescriptions_appointments.sql  005_care_team_and_dependents.sql  006_fix_security_warnings.sql  007_fix_users_rls_recursion.sql
aficare-agent/plugins/malaria/: malaria_plugin.py
aficare-agent/plugins/malaria/assets/: malaria.json
aficare-agent/scripts/: fix_and_populate_data.py  populate_sample_data.py
aficare-agent/src/: __init__.py
aficare-agent/src/ai/: __init__.py  hybrid_medical_agent.py  medical_agent_graph.py  setup_free_ai.py  streamlit_integration.py
aficare-agent/src/api/: main.py
aficare-agent/src/auth/: user_manager.py
aficare-agent/src/config/: default.yaml
aficare-agent/src/core/: __init__.py  agent.py  langchain_agent.py  plugin_manager.py  reasoning_engine.py
aficare-agent/src/core/interfaces/: plugin.py
aficare-agent/src/database/: __init__.py  database_manager.py  enhanced_database_manager.py
aficare-agent/src/llm/: __init__.py  local_llm.py  prompt_templates.py  response_parser.py
aficare-agent/src/memory/: __init__.py  patient_store.py
aficare-agent/src/rules/: __init__.py  rule_engine.py  triage_engine.py
aficare-agent/src/ui/: pwa_component.py
aficare-agent/src/ui/themes/: professional_medical_theme.py
aficare-agent/src/utils/: config.py  export_manager.py  logger.py  qr_manager.py
aficare-agent/static/: manifest.json  offline.html  sw.js
aficare_flutter/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  DEBUG_APP.bat  Dockerfile  QUICK_START.md  README.md  SETUP_GUIDE.md  nginx.conf  pubspec.yaml  vercel.json
aficare_flutter/.dart_tool/: package_config.json  package_config_subset
aficare_flutter/android/: .gitignore  build.gradle  build_log.txt  local.properties
aficare_flutter/android/app/: build.gradle  proguard-rules.pro  upload-keystore.b64
aficare_flutter/assets/knowledge_base/: dosages.json
aficare_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
aficare_flutter/ios/Runner/: Info.plist  (+1 more)
aficare_flutter/lib/: main.dart
aficare_flutter/supabase/: schema.sql
aficare_flutter/test/: widget_test.dart
aficare_flutter/web/: index.html  manifest.json
docs/: COMPLETE_RLS_FIX.sql  FIX_STATUS.txt  FLUTTER_APP_FIX_GUIDE.md  WHICH_APP_TO_FIX.md
(+137 files in other folders)
